--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-connect": "^5.0.0",
     "gulp-file-include": "^1.0.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
