--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
-    "merge-options": "0.0.64"
+    "merge-options": "0.0.64",
+    "merge-stream": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
