--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=6.9"
   },
   "dependencies": {
+    "browserify": "^13.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-connect": "^5.0.0",
@@ -28,8 +29,13 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
+    "gulp-util": "^3.0.8",
     "merge-options": "0.0.64",
-    "merge-stream": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "pretty-hrtime": "^1.0.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
