--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "browserify": "^13.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.3.2",
     "gulp-connect": "^5.0.0",
     "gulp-file-include": "^1.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.4.0",
     "gulp-util": "^3.0.8",
     "merge-options": "0.0.64",
