--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-sourcemaps": "^2.4.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
+    "gulp.spritesmith": "^6.3.0",
     "merge-options": "0.0.64",
     "merge-stream": "^1.0.1",
     "pretty-hrtime": "^1.0.3",
